# LLM-Project

./: .coverage  .gitignore  README.md  chat.py  pyproject.toml  requirements.txt
.github/workflows/: flake8.yaml  tests.yaml
tools/: cat.py  grep.py  ls.py
