[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmc-csci040-andrewvankomen"
version = "0.1.1"
dependencies = [
    "groq",
    "python-dotenv",
]

[project.scripts]
chat = "chat:repl"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["chat.py"]